[tool.poetry]
name = "linkedin-post-bot"
version = "0.1.0"
description = ""
authors = ["Radoslaw Matusiak <radoslaw.matusiak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
openai = "^1.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
